--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ description = "A safe, low-level reimplementation of the freedekstop.org libdrm"
 version = "0.0.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
+
+[dependencies]
+drm-sys = "0.0.4"
+nix = "0.8.1"
