--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "libdrm"
-description = "A safe, low-level reimplementation of the freedekstop.org libdrm"
+name = "drm"
+description = "Safe, low-level bindings to the Direct Rendering Manager API"
 version = "0.0.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
