--- a/drm-sys/Cargo.toml
+++ b/drm-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "drm-sys"
 description = "Bindings to the Direct Rendering Manager API"
-version = "0.0.7"
+version = "0.0.8"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 license = "MIT"
 build = "build.rs"
@@ -11,7 +11,8 @@ libc = "0.2.23"
 
 [features]
 default = []
-use_bindgen = ["bindgen"]
+use_bindgen = ["bindgen", "pkg-config"]
 
 [build-dependencies]
-bindgen = { version = "0.25", optional = true }
+bindgen = { version = "0.26.3", optional = true }
+pkg-config = { version = "0.3.9", optional = true }
