Use drm-macros version 0.0.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 
 [dependencies]
 drm-sys = "0.0.9"
-drm-macros = { path = "drm-macros" }
+drm-macros = "0.0.1"
 nix = "0.8.1"
 
 [dependencies.error-chain]
