--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 [dependencies]
 drm-sys = "0.0.9"
 nix = "0.8.1"
-derive_more = "*"
+derive_more = "0.7.1"
 
 [dependencies.error-chain]
 version = "0.11.0"
