--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "drm"
 description = "Safe, low-level bindings to the Direct Rendering Manager API"
 repository = "https://github.com/Smithay/drm-rs"
-version = "develop"
+version = "0.0.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 
