--- a/drm-sys/Cargo.toml
+++ b/drm-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "drm-sys"
 description = "Bindings to the Direct Rendering Manager API"
-version = "develop"
+version = "0.0.0"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 license = "MIT"
 build = "build.rs"
