Update basic documentation in lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 drm-sys = { path = "drm-sys" }
 nix = "*"
 derive_more = "*"
+failure = "*"
 
 [dependencies.error-chain]
 version = "*"
