Update drm-ffi crate

--- a/drm-ffi/Cargo.toml
+++ b/drm-ffi/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "drm"
+name = "drm-ffi"
 description = "Safe, low-level bindings to the Direct Rendering Manager API"
 repository = "https://github.com/Smithay/drm-rs"
 version = "0.0.0"
@@ -7,6 +7,6 @@ license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 
 [dependencies]
-drm-ffi = { path = "drm-ffi" }
+drm-sys = { path = "drm-sys" }
 nix = "0.10"
 failure = "*"
