Update properties to be mutable

--- a/drm-ffi/Cargo.toml
+++ b/drm-ffi/Cargo.toml
@@ -8,5 +8,6 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 
 [dependencies]
 drm-sys = { path = "drm-sys" }
-nix = "0.10"
+nix = "*"
 failure = "*"
+bitflags = "*"
