Make drm-sys no-std.
It doesn’t need anything from std or even from alloc, as it is a pure
binding library.

--- a/drm-ffi/drm-sys/Cargo.toml
+++ b/drm-ffi/drm-sys/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 build = "build.rs"
 
 [dependencies]
-libc = "*"
+libc = { version = "*", default-features = false }
 
 [features]
 default = []
