--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ repository = "https://github.com/Smithay/drm-rs"
 version = "0.0.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
+exclude = [".gitignore", ".github"]
 
 [dependencies]
 drm-ffi = { path = "drm-ffi" }
