cargo: Add sub-crates as workspace members
Various tools like check/clippy depend on workspaces to recursively find
crates within the root crate.  While the current (1.51) Rust stable
seems to lint all nested crates either way (perhaps by resolving `path=`
dependencies to reside inside the root directory) this does not happen
on nightly anymore, leading to lots of missed linter warnings.
Explicitly declare the drm-ffi and drm-sys crates as members of this
workspace so that all tools can find them again (when ran with `--all`
or `--workspace`).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ rustyline = "^8.0.0"
 
 [features]
 use_bindgen = ["drm-ffi/use_bindgen"]
+
+[workspace]
+members = [
+    "drm-ffi",
+    "drm-ffi/drm-sys",
+]
