--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all --all-features
+          args: --all --all-features --all-targets
 
   check-minimal:
     runs-on: ubuntu-latest
@@ -117,7 +117,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all --all-features -Z minimal-versions
+          args: --all --all-features --all-targets -Z minimal-versions
 
   test:
     needs:
