ci: Disallow all clippy warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all --all-features --all-targets
+          args: --all --all-features --all-targets -- -D warnings
 
   check-minimal:
     runs-on: ubuntu-latest
