--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "drm"
 description = "Safe, low-level bindings to the Direct Rendering Manager API"
 repository = "https://github.com/Smithay/drm-rs"
-version = "0.0.0"
+version = "0.4.0"
 license = "MIT"
-authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
+authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victor Brekenfeld <crates-io@drakulix.de>"]
 exclude = [".gitignore", ".github"]
 
 [dependencies]
