Specify internal dependency versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victor Brekenfeld <crate
 exclude = [".gitignore", ".github"]
 
 [dependencies]
-drm-ffi = { path = "drm-ffi" }
+drm-ffi = { path = "drm-ffi", version = "0.1.0" }
 drm-fourcc = "^2.0.0"
 nix = "^0.20.0"
 
