Migrate enum arrays to the bitflags crate
`bitflags` is the "de-facto standard" crate when it comes to
representing bitfields in an easy manner, and providing the necessary
tooling around it.  It allows to easily construct and compare
combinations of flags without having to fall back to casts and slices of
individual flag bits.  In addition the type documents and guards
possible values, giving a more ergonomic user-experience overall.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victor Brekenfeld <crate
 exclude = [".gitignore", ".github"]
 
 [dependencies]
+bitflags = "1"
 drm-ffi = { path = "drm-ffi", version = "0.2.0" }
 drm-fourcc = "^2.0.0"
 nix = "^0.22.0"
