--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 name = "drm"
 description = "Safe, low-level bindings to the Direct Rendering Manager API"
 repository = "https://github.com/Smithay/drm-rs"
-version = "0.6.2"
+version = "0.7.0"
 license = "MIT"
-authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victor Brekenfeld <crates-io@drakulix.de>"]
+authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victoria Brekenfeld <crates-io@drakulix.de>"]
 exclude = [".gitignore", ".github"]
 
 [dependencies]
 bitflags = "1"
 bytemuck = { version = "1.12", features = ["extern_crate_alloc", "derive"] }
-drm-ffi = { path = "drm-ffi", version = "0.2.1" }
+drm-ffi = { path = "drm-ffi", version = "0.3.0" }
 drm-fourcc = "^2.2.0"
 
 [dependencies.nix]
