deps: Pin 1.63.0 as MSRV

--- a/drm-ffi/drm-sys/Cargo.toml
+++ b/drm-ffi/drm-sys/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.2.0"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 license = "MIT"
 build = "build.rs"
+rust-version = "1.63"
 
 [dependencies]
 libc = { version = "^0.2.29", default-features = false }
