--- a/drm-ffi/Cargo.toml
+++ b/drm-ffi/Cargo.toml
@@ -5,6 +5,7 @@ repository = "https://github.com/Smithay/drm-rs"
 version = "0.3.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
+rust-version = "1.63"
 
 [dependencies]
 drm-sys = { path = "drm-sys", version = "0.2.0" }
