--- a/drm-ffi/drm-sys/Cargo.toml
+++ b/drm-ffi/drm-sys/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "drm-sys"
 description = "Bindings to the Direct Rendering Manager API"
+repository = "https://github.com/Smithay/drm-rs"
 version = "0.5.0"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 license = "MIT"
