Generate bindings once for all platforms and architectures
The same drm headers are used for all architectures, and for the BSDs.
There are only a couple typedefs that differ.

This uses `linux-raw-sys` to define `__kernel_size_t` on Linux, and
`libc::size_t` on the BSDs.

--- a/drm-ffi/drm-sys/Cargo.toml
+++ b/drm-ffi/drm-sys/Cargo.toml
@@ -16,3 +16,9 @@ update_bindings = ["use_bindgen"]
 [build-dependencies]
 bindgen = { version = "0.66", optional = true }
 pkg-config = { version = "0.3.19", optional = true }
+
+[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
+linux-raw-sys = { version = "0.6", default-features = false, features = ["general", "no_std"] }
+
+[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
+libc = "0.2"
