--- a/drm-ffi/Cargo.toml
+++ b/drm-ffi/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.6.0"
 license = "MIT"
 authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
 rust-version = "1.65"
+edition = "2021"
 
 [dependencies]
 drm-sys = { path = "drm-sys", version = "0.5.0" }
