Use `rustix` instead of `nix`
Not *too* hard to update by defining macros like Nix had. It would be
possible to replace use of the macro with just type aliases for opcodes,
but it's still necessary to deal with `Getter`/`Setter`/`Updater`, and
repeat the type.

--- a/drm-ffi/Cargo.toml
+++ b/drm-ffi/Cargo.toml
@@ -10,11 +10,7 @@ edition = "2021"
 
 [dependencies]
 drm-sys = { path = "drm-sys", version = "0.5.0" }
-
-[dependencies.nix]
-version = "0.27"
-default-features = false
-features = ["ioctl"]
+rustix = { version = "0.38.22" }
 
 [features]
 use_bindgen = ["drm-sys/use_bindgen"]
