--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,19 +14,11 @@ bitflags = "2"
 bytemuck = { version = "1.12", features = ["extern_crate_alloc", "derive"] }
 drm-ffi = { path = "drm-ffi", version = "0.6.0" }
 drm-fourcc = "^2.2.0"
-
-[dependencies.nix]
-version = "0.27"
-default-features = false
-features = ["mman", "fs"]
-
-[dev-dependencies.nix]
-version = "0.27"
-default-features = false
-features = ["mman", "poll"]
+rustix = { version = "0.38.22", features = ["mm", "fs"] }
 
 [dev-dependencies]
 image = { version = "0.24", default-features = false, features = ["png"] }
+rustix = { version = "0.38.22", features = ["event", "mm"] }
 rustyline = "12"
 
 [features]
