--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ drm-ffi = { path = "drm-ffi", version = "0.9.0" }
 drm-fourcc = "^2.2.0"
 rustix = { version = "0.38.22", features = ["mm", "fs"] }
 
+[target.'cfg(target_os = "freebsd")'.dependencies]
+libc = "0.2"
+
 [dev-dependencies]
 image = { version = "0.24", default-features = false, features = ["png"] }
 rustix = { version = "0.38.22", features = ["event", "mm"] }
